--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev":"nodemon --exec babel-node ./src/index.js",
+    "prebuild": "rm -rf build && mkdir build",
+    "build:babel": "babel --out-dir build --ignore *.test.js src",
+    "build": "npm run prebuild && npm run build:babel",
+    "start": "npm run build && node ./build/index.js",
+    "start:dev": "nodemon --exec babel-node ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "crypto-random-string": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -19,8 +26,10 @@
     "path": "^0.12.7",
     "pg": "^8.0.2",
     "pg-hstore": "^2.3.3",
+    "redis": "^3.0.2",
     "sequelize": "^5.21.6",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "validatorjs": "^3.18.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
