add seed command

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "npm run prebuild && npm run build:babel",
     "start": "npm run build && node ./build/index.js",
     "start:dev": "nodemon --exec babel-node ./src/index.js",
+    "seed": "npx sequelize-cli db:seed:all",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
