--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "babel-node ./src/index.js",
     "start:dev": "nodemon --exec babel-node ./src/index.js",
     "migrate": "npx sequelize-cli db:migrate",
-    "undo:migrate":"npx sequelize db:migrate:undo:all" ,
+    "undo:migrate":"npx sequelize-cli db:migrate:undo:all" ,
     "seed": "npx sequelize-cli db:seed:all",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
