--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "babel-node ./src/index.js",
     "start:dev": "nodemon --exec babel-node ./src/index.js",
     "migrate": "npx sequelize-cli db:migrate",
+    "undo": "npx sequelize-cli db:migrate:undo:all --to 20200420131118-create-user.js",
     "undo:migrate":"npx sequelize-cli db:migrate:undo:all" ,
     "seed": "npx sequelize-cli db:seed:all",
     "test": "echo \"Error: no test specified\" && exit 1"
