--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "start": "babel-node ./src/index.js",
     "start:dev": "nodemon --exec babel-node ./src/index.js",
     "migrate": "npx sequelize-cli db:migrate",
-    "undo:migrate":"npx sequelize-cli db:migrate:undo:all" ,
+    "undo:migrate": "npx sequelize-cli db:migrate:undo:all",
     "seed": "npx sequelize-cli db:seed:all",
+    "undo:seed": "npx sequelize-cli db:seed:undo:all",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -20,12 +21,15 @@
     "@sendgrid/mail": "^7.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.21.0",
     "cors": "^2.8.5",
     "crypto-random-string": "^3.2.0",
+    "datauri": "^3.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "path": "^0.12.7",
     "pg": "^8.0.2",
     "pg-hstore": "^2.3.3",
