--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.19.0",
     "cloudinary": "^1.21.0",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "crypto-random-string": "^3.2.0",
     "datauri": "^3.0.0",
     "dotenv": "^8.2.0",
@@ -31,7 +32,6 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "node-cron": "^2.0.3",
     "path": "^0.12.7",
     "pg": "^8.0.2",
     "pg-hstore": "^2.3.3",
